tools/argocd/overlays/lab/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-ingress
  labels:
    name: argocd-ingress
    namespace: argocd
spec:
  rules:
  - host: argocd.lab.secuoyas.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: argocd-server
            port: 
              number: 80
